--- a/css/fontsico.css
+++ b/css/fontsico.css
@@ -1,72 +1,83 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?2yxofu');
-  src:  url('../fonts/icomoon.eot?2yxofu#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?2yxofu') format('truetype'),
-    url('../fonts/icomoon.woff?2yxofu') format('woff'),
-    url('../fonts/icomoon.svg?2yxofu#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
+    font-family: 'icomoon';
+    src: url('../fonts/icomoon.eot?2yxofu');
+    src: url('../fonts/icomoon.eot?2yxofu#iefix') format('embedded-opentype'), url('../fonts/icomoon.ttf?2yxofu') format('truetype'), url('../fonts/icomoon.woff?2yxofu') format('woff'), url('../fonts/icomoon.svg?2yxofu#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+[class^="icon-"],
+[class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
-
 
 .icon-facebook:before {
-  content: "\e05d";
-}
-.icon-twitter1:before {
-  content: "\e05e";
-}
-.icon-googleplus:before {
-  content: "\e05f";
-}
-.icon-tumblr:before {
-  content: "\e061";
+    content: "\e05d";
 }
 
+.icon-twitter1:before {
+    content: "\e05e";
 }
+
+.icon-googleplus:before {
+    content: "\e05f";
+}
+
+.icon-tumblr:before {
+    content: "\e061";
+}
+
+.icon-loop2:before {
+    content: "\ea2e";
+}
+
 .icon-google-plus2:before {
-  content: "\ea8c";
+    content: "\ea8c";
 }
+
 .icon-google-plus3:before {
-  content: "\ea8d";
+    content: "\ea8d";
 }
+
 .icon-facebook2:before {
-  content: "\ea91";
+    content: "\ea91";
 }
+
 .icon-instagram:before {
-  content: "\ea92";
+    content: "\ea92";
 }
+
 .icon-whatsapp:before {
-  content: "\ea93";
+    content: "\ea93";
 }
+
 .icon-telegram:before {
-  content: "\ea95";
+    content: "\ea95";
 }
+
 .icon-twitter:before {
-  content: "\ea96";
+    content: "\ea96";
 }
+
 .icon-vk:before {
-  content: "\ea98";
+    content: "\ea98";
 }
+
 .icon-pinterest:before {
-  content: "\ead1";
+    content: "\ead1";
 }
+
 .icon-pinterest2:before {
-  content: "\ead2";
-} 
+    content: "\ead2";
+}
